--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -106,11 +106,12 @@ const paginasPrincipales = [
       </div>
 
       <div class="hidden lg:flex items-center">
-        <button
+        <a
+          href="#contacto"
           class="bg-rp-orange text-white px-4 xl:px-6 py-2 rounded-full hover:bg-orange-600 transition duration-300 text-sm xl:text-base"
         >
           Cotiza ahora
-        </button>
+        </a>
       </div>
 
       <button
