--- a/src/components/LifeStages.astro
+++ b/src/components/LifeStages.astro
@@ -1,7 +1,7 @@
 ---
 // Life stages section component
 import { Image } from 'astro:assets';
-import cdmxImage from '../../public/cdmx.webp';
+import cdmxImage from '../../public/familia.webp';
 ---
 
 <section class="h-[65vh] bg-gradient-to-br from-rp-blue to-rp-light-blue relative overflow-hidden">
