--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
 // Header component
 import { Image } from "astro:assets";
-import logoImage from "../../public/seguros-monterrey-new-york-life-logo.png";
+import logoImage from "../../public/logo_ryp.webp";
 
 const segurosIndividuales = [
   {
