--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,9 +7,10 @@ import WhatsApp from '../components/Whasa.astro';
 export interface Props {
 	title: string;
 	description?: string;
+	noindex?: boolean;
 }
 
-const { title, description } = Astro.props as Props;
+const { title, description, noindex = false } = Astro.props as Props;
 ---
 
 <!DOCTYPE html>
@@ -205,6 +206,7 @@ const { title, description } = Astro.props as Props;
 		
 		<!-- Meta tags -->
 		{description && <meta name="description" content={description} />}
+		{noindex && <meta name="robots" content="noindex,nofollow" />}
 		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
